# internal/transport/rest/handler.go
@@ -8,7 +8,6 @@ import (
 	"github.com/xopxe23/books-server/internal/service"
 )
 
-
 type Handler struct {
 	services *service.Service
 }
@@ -26,6 +25,7 @@ func (h Handler) InitRoutes() *gin.Engine {
 	{
 		auth.POST("/sign-up", h.signUp)
 		auth.POST("/sign-in", h.signIn)
+		auth.GET("/refresh", h.refresh)
 	}
 	books := router.Group("/books", h.userIdentity)
 	{
